objects/Inventory__c.object
<CustomObject>
    <description>it is media object contain which are item available and description for that</description>
    <fields>
        <fullName>Date__c</fullName>
        <description>Here is date of purchasing item</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>It is description for media object what u r going to purchase</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Quantity__c</fullName>
        <description>Total Quantity for media item selected</description>
        <label>Total Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Media</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Media Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Media</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>